fix: small UI corrections

--- a/public/styles.css
+++ b/public/styles.css
@@ -366,7 +366,7 @@ h2 {
 }
 
 .cv-details {
-  background-color: #05bffc;
+  background-color: #5fc5d4;
   color: #fff;
 }
 @media screen and (min-width: 670px) {
